New auth for middleware
