# adanerds/adanerds/Restful-API/Account/app.py
@@ -6,10 +6,14 @@ import connexion
 from flask_cors import CORS
 from db import Base, engine
 from account import User,Profile,NotificationSettings # noqa
+from authorization import check_if_authorize
 logging.basicConfig(level=logging.INFO)
 app = connexion.App(__name__, specification_dir="openapi/")
 Base.metadata.create_all(engine)
-app.add_api('account-api.yaml')
+app.add_api('account-api.yaml',auth_all_paths=True)
+
+# Add the authentication function to Connexion
+app.app.config['connexion_auth'] = {'BearerAuth': check_if_authorize}
 
 # Initialize CORS
 CORS(app.app)
